# libcld

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  MAINTAINERS  Makefile.am  Makefile.decl  NOTES  README  README.md  README.rst  autogen.sh  cld-0.1.pc.in  cld-0.2.pc.in  cld-0.3.pc.in  configure.ac  meson.build  meson_options.txt
.ci/: script.sh
cld/: Makefile.am  abstractchannel.vala  abstractcontainer.vala  abstractcontroller.vala  abstractdevice.vala  abstractfilter.vala  abstractlog.vala  abstractmodule.vala  abstractobject.vala  abstractport.vala  abstractsensor.vala  abstractsubdevice.vala  abstracttask.vala  acquisitioncontroller.vala  aichannel.vala  aochannel.vala  automationcontroller.vala  brabendermodule.vala  buildable.vala  builder.vala  calibration.vala  channel.vala  circularbuffer.vala  cld-0.3.deps  cld.vala  coefficient.vala  comedidevice.vala  comedisubdevice.vala  comeditask.vala  common.h  connector.vala  container.vala  context.vala  control.vala  controller.vala  csvlog.vala  daq.vala  dataseries.vala  device.vala  dichannel.vala  (+35 more)
data/: Makefile.am  config.xml  config.xsd
data/device/: Makefile.am  adv-pci1713.xml
data/schema/: config.xsd
data/specfiles/: libcld.spec
data/system/: Makefile.am
debian/: NOTES  README.debian  changelog  control  gir1.2-cld-1.0.install  libcld-1.0-dev.install  postrm  preinst
doc/: .gitignore  Makefile.am  Makefile.sphinx  index.wiki
doc/source/: conf.py  configuration.rst  index.rst  installation.rst
docker/: Dockerfile  Dockerfile-test-apt-install
docker/fedora30/: Dockerfile
docs/: Makefile.am
docs/source/: conf.py  configuration.rst  index.rst  using_libcld.rst
examples/: Makefile.am  application-data.vala  async-acquisition.vala  build-from-xml.vala  builder.vala  cld.xml  comedidevice.vala  comedidevice.xml  comediexample.vala  comeditask.vala  comeditask.xml  context-validation.vala  echo-server.pl  example.vala  gtk-log.c  heidolph  licor-simulator.vala  math.vala  mathcomedi.vala  matheval.vala  matheval.xml  ndev-async-acquisition.vala  pid-mathchannel.vala  pid.vala  pid2-mathchannel.vala  polling-acquisition.vala  serial.xml  serialport.vala  socketport.vala  soup-server.vala  threads.c  threads.h  threads.vapi  velmex.vala
examples/deprecated/: comedidevice.xml  heidolph.vala  licor.vala  mathcomedi.xml  matheval.xml  serialport-xml.vala  serialport.vala
examples/deprecated/log/: log.xml
examples/deprecated/mathcomedi/: mathcomedi.vala
examples/gjs/: build-from-xml.js
examples/log/: log.vala
examples/lua/: build-from-xml.lua
examples/mathcomedi/: mathcomedi.xml
examples/node/: README.md  build-from-xml.coffee
examples/perl/: build-from-xml.pl
examples/python/: build-from-example.py  build-from-xml.py
examples/ruby/: build-from-xml.rb
m4/: cld_auto.m4  cld_check_cflag.m4
patch/: fed17-glib232.patch
po/: POTFILES.in  POTFILES.skip
rpm/: Makefile.am  libcld.spec  rpmbuild.sh
rpm/fedora/: cld.spec.in
rpm/generic/: Makefile.am  cld.spec.in
src/: cld-abstractcontainer.vala  cld-abstractcontroller.vala  cld-abstractdevice.vala  cld-abstractfilter.vala  cld-abstractlog.vala  cld-abstractmodule.vala  cld-abstractport.vala  cld-abstractsensor.vala  cld-acquisitioncontroller.vala  cld-aichannel.vala  cld-aochannel.vala  cld-automationcontroller.vala  cld-brabendermodule.vala  cld-buildable.vala  cld-builder.vala  cld-calibration.vala  cld-channel.vala  cld-circularbuffer.vala  cld-coefficient.vala  cld-comedidevice.vala  cld-comeditask.vala  cld-container.vala  cld-control.vala  cld-controller.vala  cld-csvlog.vala  cld-daq.vala  cld-dataseries.vala  cld-debug.h.in  cld-dichannel.vala  cld-dochannel.vala  cld-entry.vala  cld-filter.vala  cld-flowsensor.vala  cld-log.vala  cld-logcolumn.vala  cld-logcontroller.vala  cld-mathchannel.vala  cld-modbusport.vala  cld-module.vala  cld-parkermodule.vala  (+12 more)
tests/: Makefile.am  gi-test.py  meson.build  sample.xml  test-all  test-aochannel.vala  test-buildable.vala  test-builder.vala  test-calibration.vala  test-channel.vala  test-coefficient.vala  test-container.vala  test-control.vala  test-csv-log.vala  test-dichannel.vala  test-dochannel.vala  test-dummy-container.vala  test-filter.vala  test-flow-sensor.vala  test-object.vala  test-pid.vala  test-port.vala  test-socket-port.vala  test-vchannel.vala  testaichannel.vala  testaochannel.vala  testbuildable.vala  testbuilder.vala  testcalibration.vala  testcase.vala  testchannel.vala  testcoefficient.vala  testcontainer.vala  testcontrol.vala  testcsvlog.vala  testdaq.vala  testdevice.vala  testdichannel.vala  testdochannel.vala  testdummyobject.vala  (+16 more)
util/: add-header.sh  comedi-helper.sh  unit-test-template.erb  unit-tests.rb
vapi/: comedi.vapi  config.vapi
vapi/.svn/: entries
vapi/.svn/text-base/: Makefile.am.svn-base  config.vapi.svn-base  enum.vapi.svn-base
